<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:fillViewport="true"
    tools:isScrollContainer="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activites.MainActivity">

        <TextView
            android:id="@+id/Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="	#808080"
            android:gravity="center"
            android:text="@string/Text_name"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/ImageButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <EditText
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/User_name_hint"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/ImageButton"
            app:layout_constraintHorizontal_bias="0.676"
            app:layout_constraintStart_toStartOf="@+id/ImageButton"
            app:layout_constraintTop_toBottomOf="@+id/ImageButton"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/User_mail_hint"
            android:inputType="textEmailAddress"
            android:textColor="#000000"

            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/Name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/Name"
            app:layout_constraintTop_toBottomOf="@+id/Name"
            tools:ignore="MissingConstraints" />

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.198"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/User_male"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/User_female"
                android:textSize="25sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="DOB"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/RadioGroup"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="@+id/RadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/RadioGroup"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/Datebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="480dp"
            android:text="Change Date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.711"
            app:layout_constraintStart_toStartOf="@id/Date"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="Time"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/Date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/Date"
            app:layout_constraintTop_toTopOf="@id/Date"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/TimeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="Pick Time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="@id/Time"
            app:layout_constraintTop_toBottomOf="@id/Datebtn"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/Myroundbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#808080"
            android:text="@string/okbtn"
            android:textColor="#000000"
            android:textSize="25sp"
            app:buttonTint="@color/teal_700"
            app:layout_constraintEnd_toEndOf="@+id/CheckBox"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/CheckBox"
            app:layout_constraintTop_toBottomOf="@+id/CheckBox"
            app:strokeColor="#C81E1E"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/conditions"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/Time"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/Time"
            app:layout_constraintTop_toBottomOf="@+id/Time"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/ImageButton"
            android:layout_width="137dp"
            android:layout_height="158dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="136dp"
            android:layout_marginRight="136dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.934"
            app:layout_constraintStart_toStartOf="@+id/Register"
            app:layout_constraintTop_toBottomOf="@id/Register"
            app:srcCompat="@drawable/face" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="84dp"
            android:layout_height="31dp"
            android:layout_marginTop="16dp"
            android:text="@string/User_gender"
            android:textColor="#000000
"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/Email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/Email"
            app:layout_constraintTop_toBottomOf="@+id/Email" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

